--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <title>Love Running</title>
     <!-- Favicon -->
     <link
-      rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png" />
     <link
-      rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png" />
     <link
-      rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
-      <!-- Stylesheet -->
-       <link rel="stylesheet" href="assets/css/style.css">
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png" />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -29,7 +37,7 @@
       <a href="index.html">
         <h1 id="logo">Love Running</h1>
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle">
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label">X</label>
       <nav>
         <ul id="menu">
@@ -44,6 +52,21 @@
     <main>Main Content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i></a
+          >
+        </li>
+      </ul>
+    </footer>
+    
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/43043b411d.js" crossorigin="anonymous"></script>
   </body>
 </html>
